Fix volume buttons not being aligned

--- a/extension/popup.css
+++ b/extension/popup.css
@@ -105,6 +105,7 @@ body.theme-dark input[type=range]:focus::-webkit-slider-thumb {
 .btn-volume {
   color: #24292e;
   line-height: 1;
+  margin-bottom: -1px;
 }
 
 .btn-volume:focus {
